Oct 6,	2001            Update for new versions of autoconf:
			mv acsite.m4 acinclude.m4
			cp configure.in configure.ac
			autoupdate configure.ac
			And ship configure.ac & acinclude.m4
Sep 9,	2001	0.08	Start on commit/discard editing, add tab support.
Sep 4, 	2001	0.07	Fix segf reported by Marmot in empty submenus.
		0.06	Fix a race condition in med_del_submenu_tree().
Sep 3,	2001	0.05	Separators, menu delete, drag window rendering.
			Probably some bugs...  Certainly a menu leak or two.

Aug 27, 2001		Add 'new entry' item, enable drag and drop additions.
	
Aug 4, 	2001		New!
	