@@ -8,8 +8,8 @@ static Evas_List entries;
 static E_Entry* has_focus = NULL;
 static Evas_List dirty_entries;
 
-static void e_clear_selection(Eevent * ev);
-static void e_paste_request(Eevent * ev);
+static void e_clear_selection(Ecore_Event * ev);
+static void e_paste_request(Ecore_Event * ev);
 
 static void e_entry_down_cb(void *_data, Evas _e, Evas_Object _o, int _b, int _x, int _y);
 static void e_entry_up_cb(void *_data, Evas _e, Evas_Object _o, int _b, int _x, int _y);
@@ -24,9 +24,9 @@ med_mark_entry_dirty(E_Entry *_entry);
 
 
 static void
-e_clear_selection(Eevent * ev)
+e_clear_selection(Ecore_Event * ev)
 {
-   Ev_Clear_Selection *e;
+   Ecore_Event_Clear_Selection *e;
    Evas_List l;
    
    e = ev->event;
@@ -37,7 +37,7 @@ e_clear_selection(Eevent * ev)
 	entry = l->data;
 	if (entry->selection_win == e->win)
 	  {
-	     e_window_destroy(entry->selection_win);
+	     ecore_window_destroy(entry->selection_win);
 	     entry->selection_win = 0;
 	     entry->select.start = -1;
 	     entry->select.length = 0;
@@ -47,9 +47,9 @@ e_clear_selection(Eevent * ev)
 }
 
 static void
-e_paste_request(Eevent * ev)
+e_paste_request(Ecore_Event * ev)
 {
-   Ev_Paste_Request *e;
+   Ecore_Event_Paste_Request *e;
    Evas_List l;
    
    e = ev->event;
@@ -78,8 +78,8 @@ e_entry_down_cb(void *_data, Evas _e, Evas_Object _o, int _b, int _x, int _y)
    entry = _data;
    if ((_b == 2) && (!entry->mouse_down))       
      {
-	if (entry->paste_win) e_window_destroy(entry->paste_win);
-	entry->paste_win = e_selection_request();
+	if (entry->paste_win) ecore_window_destroy(entry->paste_win);
+	entry->paste_win = ecore_selection_request();
      }
    else if (!entry->mouse_down)
      {
@@ -222,8 +222,8 @@ e_entry_move_cb(void *_data, Evas _e, Evas_Object _o, int _b, int _x, int _y)
 	     str2 = e_entry_get_selection(entry);
 	     if (str2)
 	       {
-		  if (entry->selection_win) e_window_destroy(entry->selection_win);
-		  entry->selection_win = e_selection_set(str2);
+		  if (entry->selection_win) ecore_window_destroy(entry->selection_win);
+		  entry->selection_win = ecore_selection_set(str2);
 		  free(str2);
 	       }
 	  }
@@ -399,8 +399,8 @@ e_entry_configure(E_Entry *entry)
 void
 e_entry_init(void)
 {
-   e_event_filter_handler_add(EV_PASTE_REQUEST,               e_paste_request);
-   e_event_filter_handler_add(EV_CLEAR_SELECTION,             e_clear_selection);
+   ecore_event_filter_handler_add(ECORE_EVENT_PASTE_REQUEST,               e_paste_request);
+   ecore_event_filter_handler_add(ECORE_EVENT_CLEAR_SELECTION,             e_clear_selection);
 }
 
 void
@@ -427,7 +427,7 @@ e_entry_new(void)
 }
 
 void
-e_entry_handle_keypress(E_Entry *entry, Ev_Key_Down *e)
+e_entry_handle_keypress(E_Entry *entry, Ecore_Event_Key_Down *e)
 {
    if (!entry->focused) return;
    if (!strcmp(e->key, "Up"))
@@ -483,8 +483,8 @@ e_entry_handle_keypress(E_Entry *entry, Ev_Key_Down *e)
      }
    else if (!strcmp(e->key, "Insert"))
      {
-	if (entry->paste_win) e_window_destroy(entry->paste_win);
-	entry->paste_win = e_selection_request();
+	if (entry->paste_win) ecore_window_destroy(entry->paste_win);
+	entry->paste_win = ecore_selection_request();
      }
    else if (!strcmp(e->key, "Home"))
      {
@@ -512,7 +512,7 @@ e_entry_handle_keypress(E_Entry *entry, Ev_Key_Down *e)
      {
 	char *type;
 	
-	type = e_key_press_translate_into_typeable(e);
+	type = ecore_keypress_translate_into_typeable(e);
 	if (type)
 	  {
 	    //printf("%0x\n", type[0]);
